[gd_scene load_steps=20 format=3 uid="uid://b2d3omfdbndsy"]

[ext_resource type="Script" path="res://Niveles_bases.gd" id="1_7wxkw"]
[ext_resource type="Texture2D" uid="uid://b2ipj4smjimsf" path="res://Plataforma_Minimapa.png" id="2_v1gw4"]
[ext_resource type="Texture2D" uid="uid://56623b73yw4s" path="res://M_Minimapa.png" id="3_xiakw"]
[ext_resource type="Texture2D" uid="uid://d15utcsh872g6" path="res://E_Minimapa.png" id="4_we6hs"]
[ext_resource type="Texture2D" uid="uid://cudaogh37wjlf" path="res://P_Minimapa.png" id="5_u8fpm"]
[ext_resource type="PackedScene" uid="uid://bo4lh4oiihtjm" path="res://enemigo.tscn" id="6_5vw4v"]
[ext_resource type="PackedScene" uid="uid://hcdln4obaolo" path="res://enemigoDispara.tscn" id="7_hi0kd"]
[ext_resource type="PackedScene" uid="uid://b5hijcqinnw2o" path="res://monedas.tscn" id="8_p5tjf"]
[ext_resource type="PackedScene" uid="uid://62epbqipjcp0" path="res://plataforma.tscn" id="9_dcgiw"]
[ext_resource type="PackedScene" uid="uid://cmn7la0slpon2" path="res://puerta_verde.tscn" id="10_fkstq"]
[ext_resource type="PackedScene" uid="uid://c1qm12suwf5xn" path="res://cofre.tscn" id="11_jjvn0"]
[ext_resource type="PackedScene" uid="uid://cdhiqncku6l4e" path="res://personaje.tscn" id="11_wgble"]
[ext_resource type="PackedScene" uid="uid://bug4fh3ypl043" path="res://area_de_colision_baja.tscn" id="12_actxj"]
[ext_resource type="PackedScene" uid="uid://c5jlv66026do8" path="res://interfaz_juego.tscn" id="14_uc2ht"]
[ext_resource type="Texture2D" uid="uid://3j78o1y027j5" path="res://fondo.png" id="15_dlfly"]
[ext_resource type="PackedScene" uid="uid://d0ngiaofjn0vg" path="res://area_izquierda.tscn" id="16_1po2b"]
[ext_resource type="PackedScene" uid="uid://dubw01dh2fpjv" path="res://area_derecha.tscn" id="17_cvo27"]
[ext_resource type="PackedScene" uid="uid://dq6as0aepc2ld" path="res://pantallita.tscn" id="18_3gdtq"]
[ext_resource type="PackedScene" uid="uid://boc3ejmr5ktcx" path="res://area_de_colision_alta.tscn" id="19_mehiu"]

[node name="Niveles" type="Node2D"]
script = ExtResource("1_7wxkw")
imagen_plataforma = ExtResource("2_v1gw4")
imagen_moneda = ExtResource("3_xiakw")
imagen_enemigo = ExtResource("4_we6hs")
imagen_personaje = ExtResource("5_u8fpm")
enemigo = ExtResource("6_5vw4v")
enemigoDisparador = ExtResource("7_hi0kd")
moneda = ExtResource("8_p5tjf")
plataforma = ExtResource("9_dcgiw")
puertaVerde = ExtResource("10_fkstq")
cofre = ExtResource("11_jjvn0")
metadata/_edit_vertical_guides_ = [-6000.0, 6000.0]
metadata/_edit_horizontal_guides_ = [6048.0, -6008.0, 8.0]

[node name="personaje" parent="." instance=ExtResource("11_wgble")]
position = Vector2(0, -5900)

[node name="AreaDeColisionBaja" parent="." instance=ExtResource("12_actxj")]
position = Vector2(0, 6100)

[node name="Interfazjuego" parent="." instance=ExtResource("14_uc2ht")]

[node name="ContenedorPlataformas" type="Node2D" parent="."]

[node name="ContenedorMonedas" type="Node2D" parent="."]

[node name="Contenedor_enemigos" type="Node2D" parent="."]

[node name="Fondo" type="Sprite2D" parent="."]
modulate = Color(0.40625, 0.355469, 0.355469, 1)
z_index = -10
scale = Vector2(7, 7)
texture = ExtResource("15_dlfly")

[node name="AreaIzquierda" parent="." instance=ExtResource("16_1po2b")]
position = Vector2(-6000, 0)

[node name="AreaDerecha" parent="." instance=ExtResource("17_cvo27")]
position = Vector2(6000, 0)

[node name="pantallita" parent="." instance=ExtResource("18_3gdtq")]

[node name="AreaDeColisionAlta" parent="." instance=ExtResource("19_mehiu")]
position = Vector2(0, -6000)
